# PythonWeb_hw_11---flask_address_book

./: app.py  pyproject.toml
config/: config.py
data/: app.db.sqlite3
migrations/versions/: 15ee01a444e5_add_contact_table.py  7a613f6ba6b2_initital_migration.py
src/: models.py  routes.py
src/libs/: file_service.py  validation_schemas.py
src/repository/: contacts.py  users.py
src/static/1/: 09_24_11jpeg
src/templates/: base.html
src/templates/pages/: add_person.html  address_book.html  edit.html  index.html  login.html  registration.html
